Week1/HighRise/valgrind.out
Tue Mar 31 16:31:56 UTC 2026
In file included from CircularLinkedListTests.cpp:2:
CircularLinkedList.h:19:2: error: expected ‘;’ after class definition
   19 | }
      |  ^
      |  ;
CircularLinkedListTests.cpp: In function ‘int main()’:
CircularLinkedListTests.cpp:7:75: error: no matching function for call to ‘CircularLinkedList<std::__cxx11::basic_string<char> >::CircularLinkedList(<brace-enclosed initializer list>)’
    7 |     CircularLinkedList<string> residents({"Laing", "Wilder",  "Frobisher"})
      |                                                                           ^
In file included from CircularLinkedListTests.cpp:2:
CircularLinkedList.h:12:7: note: candidate: ‘CircularLinkedList<std::__cxx11::basic_string<char> >::CircularLinkedList()’
   12 | class CircularLinkedList  {
      |       ^~~~~~~~~~~~~~~~~~
CircularLinkedList.h:12:7: note:   candidate expects 0 arguments, 1 provided
CircularLinkedList.h:12:7: note: candidate: ‘CircularLinkedList<std::__cxx11::basic_string<char> >::CircularLinkedList(const CircularLinkedList<std::__cxx11::basic_string<char> >&)’
CircularLinkedList.h:12:7: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const CircularLinkedList<std::__cxx11::basic_string<char> >&’
CircularLinkedList.h:12:7: note: candidate: ‘CircularLinkedList<std::__cxx11::basic_string<char> >::CircularLinkedList(CircularLinkedList<std::__cxx11::basic_string<char> >&&)’
CircularLinkedList.h:12:7: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘CircularLinkedList<std::__cxx11::basic_string<char> >&&’
CircularLinkedListTests.cpp:19:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   19 | }
      | ^
==27991== Memcheck, a memory error detector
==27991== Copyright (C) 2002-2024, and GNU GPL'd, by Julian Seward et al.
==27991== Using Valgrind-3.23.0 and LibVEX; rerun with -h for copyright info
==27991== Command: ./a.out
==27991== 
Bleht
==27991== 
==27991== HEAP SUMMARY:
==27991==     in use at exit: 0 bytes in 0 blocks
==27991==   total heap usage: 2 allocs, 2 frees, 76,800 bytes allocated
==27991== 
==27991== All heap blocks were freed -- no leaks are possible
==27991== 
==27991== For lists of detected and suppressed errors, rerun with: -s
==27991== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)
